<resources>
    <string name="app_name">appcurso</string>

    <string name="btn_view_iniciar_sesion">Iniciar Sesion</string>
    <string name="btn_view_registrar">Registrar Usuario</string>

    <string name="btn_text_iniciar">Iniciar</string>
    <string name="btn_text_registrar">Registrar</string>

    <string name="hint_text_email">E-mail</string>
    <string name="hint_text_password">Password</string>
    <string name="hint_text__confirma_password">Confirmar Password</string>
    <string name="hint_text_nombre">Nombre</string>
    <string name="hint_text_fec_nac">Fecha Nacimiento</string>
    <string name="hint_text_telefono">Telefono</string>


    <string name="tl_view_iniciar_sesion">Iniciar Sesion</string>
    <string name="tl_view_registrar">Registrar Usuario</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>