<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_register">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRes"
        android:layout_width="414dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="#ff6750a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBackRes"
                android:layout_width="65dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:background="#ff6750a4"
                android:foregroundGravity="top"
                android:foregroundTint="#FAF8F8"
                android:importantForAccessibility="no"
                android:onClick="regregar"
                android:src="?attr/homeAsUpIndicator"
                app:tint="#FBFBFB" />

            <TextView
                android:id="@+id/txtBackRes"
                android:layout_width="371dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_view_registrar"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardRes" />

    <ImageView
        android:id="@+id/imgRegistrar"
        android:layout_width="184dp"
        android:layout_height="176dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="325dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoUser">

        <EditText
            android:id="@+id/txtNombreReg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_text_nombre"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTelefonoReg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_text_telefono"
            android:inputType="number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_text_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPassReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_text_password"
            android:inputType="numberPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPass2Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_text__confirma_password"
            android:inputType="numberPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registar"
            android:text="@string/btn_text_registrar"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTipoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRegistrar" />
</androidx.constraintlayout.widget.ConstraintLayout>